@@ -1,3 +1,13 @@
+2007-04-12  Martin Leidig  <mleidig@schlund.de>
+
+	Added JSON serialization tests for Lists and Maps, e.g. unparameterized
+	Lists and Maps, which can be serialized, but not deserialized due to
+	missing type information.
+
+	* tests/junit/de/schlund/pfixcore/webservice/jsonws/JSONSerializerTest.java
+	* tests/junit/de/schlund/pfixcore/webservice/jsonws/ReadOnlyBean.java
+	* tests/junit/de/schlund/pfixcore/webservice/jsonws/TestBean.java
+
 2007-04-11  Martin Leidig  <mleidig@schlund.de>
 
 	Added JSON (de-)serialization support for generic Lists and Maps. Because of
